Patch to avoid CUDA runtime call at import

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,10 @@ source:
   # url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   url: https://github.com/numba/{{ name }}/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    # Avoid CUDA runtime call on import
+    # xref: https://github.com/numba/numba/pull/6147
+    - patches/PR_6147.patch
 
 build:
   number: 0
