Simplify `tbb` constraint

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,9 +50,9 @@ requirements:
     - importlib-metadata  # [py < 39]
 
   run_constrained:
-    - tbb  >=2021.6.0,<2022  # [not (armv6l or armv7l or aarch64 or linux32 or ppc64le)]
+    - tbb >=2021.6.0,<2022
     # avoid confusion from openblas bugs
-    - libopenblas !=0.3.6  # [x86_64]
+    - libopenblas !=0.3.6             # [x86_64]
     - libopenblas >=0.3.18, !=0.3.20  # [arm64]
     # CUDA 10.2 or later is required for CUDA support
     - cudatoolkit >=10.2
@@ -74,7 +74,7 @@ test:
     - scipy
     - ipython
     - setuptools
-    - tbb >=2021.6
+    - tbb
     - llvm-openmp              # [osx]
     # Need these for AOT. Do not init msvc as it may not be present
     - {{ compiler('c') }}      # [not win]
