--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   entry_points:
     - numba = numba.misc.numba_entry:main
   script:
@@ -41,7 +41,7 @@ requirements:
     - setuptools
     - llvmlite 0.40.*
     - numpy
-    - tbb-devel 2021.6.0
+    - tbb-devel >= 2021.6.0
 
   run:
     - python
