--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,7 +41,7 @@ requirements:
     - setuptools
     - llvmlite 0.41.*
     - numpy
-    - tbb-devel >=2021.6.0
+    - tbb-devel 2021.6.0
 
   run:
     - python
